--- a/anran-java-dingtalk/pom.xml
+++ b/anran-java-dingtalk/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.github.zhangchunsheng</groupId>
     <artifactId>anran-java</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>anran-java-dingtalk</artifactId>
-  <name>AnranJava - Energy Java SDK</name>
+  <name>AnranJava - Dingtalk Java SDK</name>
   <description>电费 Java SDK</description>
 
   <dependencies>
